...
            <Text style={styles.logoutText}>Odhlásit</Text>
          )}
        </TouchableOpacity>
      </View>

      <View style={styles.content}>
        <Text style={styles.logo}>ClearWay</Text>
        <Text style={styles.subtitle}>Měření průjezdnosti ulic</Text>
        
        <Button
          title="START"
          onPress={() => navigation.navigate('Setup')}
          style={styles.startButton}
        />
        
        <Button
          title="Nezpracovaná data"
...
